@@ -1,3 +1,8 @@
+Thu Feb 18 00:57:30 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* devio.c (devio_assert_dtr): Bother to set open_pending.
+	Reported by OKUJI Yoshinori (okuji@kuicr.kyoto-u.ac.jp).
+
 1999-02-16  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* users.c (trivfs_S_io_revoke): Fix typos.
